{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 304,
  "lineage": "94aa1093-dd2f-c94c-eeaa-b381f7547633",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "172.16.0.10",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-08-13T01:26:30.139-07:00",
            "id": "projects/invertible-tree-322409/regions/us-central1/addresses/master-internal-ip",
            "name": "master-internal-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "invertible-tree-322409",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/regions/us-central1/addresses/master-internal-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/regions/us-central1/subnetworks/invertible-tree-322409-ansible-network"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.ansible_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.70.120.229",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-08-13T01:25:45.724-07:00",
            "id": "projects/invertible-tree-322409/regions/us-central1/addresses/entrypoint-ipv4-external-static",
            "name": "entrypoint-ipv4-external-static",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "invertible-tree-322409",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/regions/us-central1/addresses/entrypoint-ipv4-external-static"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_all_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-08-13T01:26:07.650-07:00",
            "deny": [],
            "description": "Allow all internal",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/invertible-tree-322409/global/firewalls/allow-all-internal",
            "log_config": [],
            "name": "allow-all-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/global/networks/invertible-tree-322409-vpc-network",
            "priority": 1000,
            "project": "invertible-tree-322409",
            "self_link": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/global/firewalls/allow-all-internal",
            "source_ranges": [
              "172.16.0.0/28"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ping_entrypoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-08-13T01:26:07.789-07:00",
            "deny": [],
            "description": "Allow ping entrypoint from anywhere",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/invertible-tree-322409/global/firewalls/allow-ping-entrypoint",
            "log_config": [],
            "name": "allow-ping-entrypoint",
            "network": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/global/networks/invertible-tree-322409-vpc-network",
            "priority": 1001,
            "project": "invertible-tree-322409",
            "self_link": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/global/firewalls/allow-ping-entrypoint",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "entrypoint"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-08-13T01:26:07.607-07:00",
            "deny": [],
            "description": "Allow ssh from IAP range",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/invertible-tree-322409/global/firewalls/allow-ssh-iap",
            "log_config": [],
            "name": "allow-ssh-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/global/networks/invertible-tree-322409-vpc-network",
            "priority": 1002,
            "project": "invertible-tree-322409",
            "self_link": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/global/firewalls/allow-ssh-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "entrypoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210721",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/zones/us-central1-c/disks/entrypoint"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/invertible-tree-322409/zones/us-central1-c/instances/entrypoint",
            "instance_id": "6008936507639566937",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "hCTA6Iys710=",
            "name": "entrypoint",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.70.120.229",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/global/networks/invertible-tree-322409-vpc-network",
                "network_ip": "172.16.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/regions/us-central1/subnetworks/invertible-tree-322409-ansible-network",
                "subnetwork_project": "invertible-tree-322409"
              }
            ],
            "project": "invertible-tree-322409",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/zones/us-central1-c/instances/entrypoint",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "entrypoint"
            ],
            "tags_fingerprint": "4_ztmCi1eQk=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.ansible_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210721",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/zones/us-central1-c/disks/master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/invertible-tree-322409/zones/us-central1-c/instances/master",
            "instance_id": "7327485295643562541",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "Lq3PNCzQoks=",
            "metadata_startup_script": "#!/bin/bash\nsudo echo 'deb http://ppa.launchpad.net/ansible/ansible/ubuntu trusty main' \u003e\u003e /etc/apt/sources.list\nsudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 93C4A3FD7BB9C367\nsudo apt update\nsudo apt -y install ansible",
            "name": "master",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/global/networks/invertible-tree-322409-vpc-network",
                "network_ip": "172.16.0.10",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/regions/us-central1/subnetworks/invertible-tree-322409-ansible-network",
                "subnetwork_project": "invertible-tree-322409"
              }
            ],
            "project": "invertible-tree-322409",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/zones/us-central1-c/instances/master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_address.master",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.ansible_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/invertible-tree-322409/global/networks/invertible-tree-322409-vpc-network",
            "mtu": 0,
            "name": "invertible-tree-322409-vpc-network",
            "project": "invertible-tree-322409",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/global/networks/invertible-tree-322409-vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-08-13T01:26:30.134-07:00",
            "id": "projects/invertible-tree-322409/regions/us-central1/routers/invertible-tree-322409-ansible-network-router",
            "name": "invertible-tree-322409-ansible-network-router",
            "network": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/global/networks/invertible-tree-322409-vpc-network",
            "project": "invertible-tree-322409",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/regions/us-central1/routers/invertible-tree-322409-ansible-network-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.ansible_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "invertible-tree-322409/us-central1/invertible-tree-322409-ansible-network-router/invertible-tree-322409-ansible-network-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "invertible-tree-322409-ansible-network-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "invertible-tree-322409",
            "region": "us-central1",
            "router": "invertible-tree-322409-ansible-network-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router",
            "google_compute_subnetwork.ansible_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ansible_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-08-13T01:26:07.933-07:00",
            "gateway_address": "172.16.0.1",
            "id": "projects/invertible-tree-322409/regions/us-central1/subnetworks/invertible-tree-322409-ansible-network",
            "ip_cidr_range": "172.16.0.0/28",
            "name": "invertible-tree-322409-ansible-network",
            "network": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/global/networks/invertible-tree-322409-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "invertible-tree-322409",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/invertible-tree-322409/regions/us-central1/subnetworks/invertible-tree-322409-ansible-network"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}